[gd_scene load_steps=14 format=3 uid="uid://bdpqhet5pr4sm"]

[ext_resource type="Texture2D" uid="uid://d0rmhscy6f1rl" path="res://Assets/Chapters Screen Assets/Chapters Menu Screen.png" id="1_o5h7k"]
[ext_resource type="Script" uid="uid://dv6rpt1r4a75h" path="res://Scripts/Menu Scripts/ChaptersScreen.gd" id="1_vg3ar"]
[ext_resource type="Texture2D" uid="uid://dch6rk4g5cipp" path="res://Assets/Chapters Screen Assets/Chapter 1 BUTTON (not hovered).png" id="2_vg3ar"]
[ext_resource type="Texture2D" uid="uid://cwycxouq03mlf" path="res://Assets/Chapters Screen Assets/Chapter 1 BUTTON (hovered).png" id="3_5wnku"]
[ext_resource type="Texture2D" uid="uid://c8xlenj7fikq8" path="res://Assets/Chapters Screen Assets/Chapter 2 BUTTON (not hovered).png" id="4_luj2l"]
[ext_resource type="Texture2D" uid="uid://dmb1bt74n3fwk" path="res://Assets/Chapters Screen Assets/Chapter 2 BUTTON (hovered).png" id="5_w5g63"]
[ext_resource type="Texture2D" uid="uid://cs85cakvkgi1w" path="res://Assets/Chapters Screen Assets/Chapter 3 BUTTON (not hovered).png" id="6_h7y76"]
[ext_resource type="Texture2D" uid="uid://dgaiakbbqn3w2" path="res://Assets/Level Button Assets/Chapters Locked Button (not hovered).png" id="7_5wnku"]
[ext_resource type="Texture2D" uid="uid://dgv525nx1q32y" path="res://Assets/Chapters Screen Assets/Chapter 3 BUTTON (hovered).png" id="7_ukttb"]
[ext_resource type="Texture2D" uid="uid://bwchv7e2buxax" path="res://Assets/Chapters Screen Assets/Chapter 4 BUTTON (not hovered).png" id="8_cx5ka"]
[ext_resource type="Texture2D" uid="uid://dkhi6wepjia78" path="res://Assets/Chapters Screen Assets/Chapter 4 BUTTON (hovered).png" id="9_60siw"]
[ext_resource type="Texture2D" uid="uid://crlfeyg4504ld" path="res://Assets/Menu Buttons/Back BUTTON (not hovered).png" id="10_3p7on"]
[ext_resource type="Texture2D" uid="uid://kivgdmkjc8lo" path="res://Assets/Menu Buttons/Back BUTTON (hovered).png" id="11_uw2p1"]

[node name="ChaptersScreen" type="Node2D"]
script = ExtResource("1_vg3ar")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Chapters" type="Sprite2D" parent="Background"]
position = Vector2(270, 480)
texture = ExtResource("1_o5h7k")

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Chapter1" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 121.0
offset_top = 292.0
offset_right = 421.0
offset_bottom = 392.0
texture_normal = ExtResource("2_vg3ar")
texture_pressed = ExtResource("3_5wnku")

[node name="Chapter2" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 121.0
offset_top = 383.0
offset_right = 421.0
offset_bottom = 483.0
texture_normal = ExtResource("4_luj2l")
texture_pressed = ExtResource("5_w5g63")
texture_disabled = ExtResource("7_5wnku")

[node name="Chapter3" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 120.0
offset_top = 476.0
offset_right = 420.0
offset_bottom = 576.0
texture_normal = ExtResource("6_h7y76")
texture_pressed = ExtResource("7_ukttb")
texture_disabled = ExtResource("7_5wnku")

[node name="Chapter4" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 121.0
offset_top = 568.0
offset_right = 421.0
offset_bottom = 668.0
texture_normal = ExtResource("8_cx5ka")
texture_pressed = ExtResource("9_60siw")
texture_disabled = ExtResource("7_5wnku")

[node name="BackButton" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 119.0
offset_top = 768.0
offset_right = 419.0
offset_bottom = 868.0
texture_normal = ExtResource("10_3p7on")
texture_pressed = ExtResource("11_uw2p1")

[connection signal="pressed" from="Buttons/Chapter1" to="." method="_on_chapter_1_pressed"]
[connection signal="pressed" from="Buttons/Chapter2" to="." method="_on_chapter_2_pressed"]
[connection signal="pressed" from="Buttons/Chapter3" to="." method="_on_chapter_3_pressed"]
[connection signal="pressed" from="Buttons/Chapter4" to="." method="_on_chapter_4_pressed"]
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_back_button_pressed"]
